# benchlog-app

./: .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.forgejo/workflows/: build-image.yml
alembic/: env.py
alembic/versions/: 047e59d6fd67_add_project_links.py  51cd0ae3a387_add_tags_and_project_tags.py  55a77b7c702f_redesign_links_sections.py  61df0d77180e_initial_schema.py  6bfdb66987eb_add_project_files.py  6f487796c5de_add_projects_table.py  9cb6a9995bdd_initial.py  a3a4d5e6f7b8_add_gps_columns.py  a4b8c2d9e1f3_case_insensitive_unique_users.py  a9c3d71f4e22_add_project_relations.py  b31e00500c74_add_user_bio_and_social_links.py  b737c1bef24f_add_link_section_event_types.py  (+11 more)
benchlog/: activity.py  audit.py  auth.py  bootstrap.py  categories.py  collections.py  config.py  database.py  dependencies.py  email.py  export.py  file_references.py  files.py  gps_metadata.py  journal.py  link_metadata.py  links.py  main.py  markdown.py  markdown_links.py  middleware.py  project_relations.py  projects.py  rate_limit.py  site_settings.py  tags.py  templating.py  updates.py  users.py
tests/: conftest.py  test_account.py  test_activity.py  test_admin.py  test_admin_categories.py  test_audit.py  test_auth.py  test_categories.py  test_collections.py  test_description_edit.py  test_errors.py  test_explore.py  test_export.py  test_file_link_autocomplete.py  test_file_references.py  test_files.py  test_gps_metadata.py  test_gps_models.py  test_journal.py  test_link_metadata.py  test_links.py  test_markdown.py  test_meta_og.py  test_oidc.py  test_passkeys.py  test_profile.py  test_project_forks.py  test_project_inline_edit.py  test_project_relations.py  test_projects.py  test_protection.py  test_tags.py  test_updates.py
(+167 files in other folders)
