[project]
name = "benchlog"
version = "0.1.0"
description = "A self-hosted project journal for makers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "python-slugify>=8.0",
    "pillow>=11.0",
    "mdit-py-plugins>=0.5.0",
    "linkify-it-py>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
