[project]
name = "benchlog"
version = "0.1.0"
description = "A self-hosted project journal for makers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "httpx>=0.28",
    "aiosmtplib>=3.0",
    "email-validator>=2.2",
    "webauthn>=2.5",
    "joserfc>=1.6.4",
    "python-slugify>=8.0.4",
    "pillow>=12.2.0",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "linkify-it-py>=2.1.0",
    "pygments>=2.18",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-xdist>=3.6",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
